data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_775.wast
;; 6. **Branched Loop with Incorrect Result Types**:    - **Description**: Test a loop with branches (using `br` or `br_if`) that do not match the result types specified by the block type.    - **Constraint Checked**: Validates that branching instructions adhere to expected result types for the block.    - **Relation to CFG**: Inconsistent result types disrupt CFG path validation, leading to error states.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (i32.const 1)
        (br 0)  ;; Loop should return an i32, but `br` does not produce any result, causing type mismatch
      )
    )
  )
  "type mismatch"
)